--- a/index.html
+++ b/index.html
@@ -9,7 +9,47 @@
 <body>
 
     <div class="wrapper">
-        
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#"> <img class="google-app" src="Images/google-apps.png"> </a></li>
+                <li><a href="https://github.com/abulfazl-haidary"><img class="github" src="Images/Abulfazl.jpeg"></a></li>
+            </ul>
+        </nav>       
+
+        <main>
+            <img src="/Images/main.png" class="google">
+            <div class="input-wrapper">
+                <input type="text">
+                <div class="search-icon-wrapper">    
+                    <a href="#" class="search-icon"> <img src="Images/search-icon.png">  </a>               
+                </div>
+                <div class="buttons-wrapper">
+                    <button>Google Search</button>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+                <p class="language">Google offered in: <a href="#">English</a> <a href="#">Spanish</a> </p>
+            </div>
+        </main>
+        <footer>
+            <div class="country">
+                <p>United States</p>
+            </div>
+            <div class="bottom-nav">
+                <div class="bottom-nav-first">
+                    <a href="#">Advertising</a>
+                    <a href="#">Business</a>
+                    <a href="#">About</a>
+                    <a href="#">How Search works</a>
+                </div>
+                <div class="bottom-nav-second">
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Settings</a>
+                </div>
+            </div>
+        </footer>
     </div>
     
 </body>
