--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>       
 
         <main>
-            <img src="/Images/main.png" class="google">
+            <img src="Images/main.png" class="google">
             <div class="input-wrapper">
                 <input type="text">
                 <div class="search-icon-wrapper">    
